bug: update inventories
